# poulpy

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  SECURITY.md  cspell.json  funding.json  rust-toolchain.toml  rustc-ice-2025-01-10T11_02_18-37328.txt  rustfmt.toml
backend/: Cargo.toml  README.md  build.rs
backend/benches/: fft.rs
backend/builds/: cpu_spqlios.rs
backend/docs/: backend_safety_contract.md
backend/examples/: fft.rs  rlwe_encrypt.rs
backend/src/: encoding.rs  lib.rs  mat_znx.rs  mat_znx_dft.rs  mat_znx_dft_ops.rs  mat_znx_dft_prep.rs  mat_znx_dft_prep_ops.rs  mat_znx_ops.rs  module.rs  sampling.rs  scalar_znx.rs  scalar_znx_dft.rs  scalar_znx_dft_ops.rs  scalar_znx_dft_prep.rs  scalar_znx_dft_prep_ops.rs  stats.rs  vec_znx.rs  vec_znx_big.rs  vec_znx_big_ops.rs  vec_znx_dft.rs  vec_znx_dft_ops.rs  vec_znx_ops.rs  znx_base.rs
backend/src/ffi/: module.rs  svp.rs  vec_znx.rs  vec_znx_big.rs  vec_znx_dft.rs  vmp.rs  znx.rs
backend/src/hal/: mod.rs
backend/src/implementation/: mod.rs
backend/src/mat_znx/: default_impl.rs  delegates.rs  impl_traits.rs  layout.rs  traits.rs
backend/src/module/: default_impl_fft64.rs  default_impls_ntt120.rs  delegates.rs  impl_traits.rs  layout.rs  mod.rs  traits.rs
base2k/: Cargo.toml  README.md  build.rs
base2k/benches/: fft.rs
base2k/examples/: automorphism_dft.rs  fft.rs  rlwe_encrypt.rs  vector_matrix_product.rs  vmp.rs
base2k/src/: bindgen.rs  commons.rs  encoding.rs  free.rs  infos.rs  internals.rs  lib.rs  mat_znx_dft.rs  mat_znx_dft_ops.rs  module.rs  sampling.rs  scalar.rs  scalar_vector_product.rs  scalar_znx.rs  scalar_znx_dft.rs  scalar_znx_dft_ops.rs  stats.rs  svp.rs  vec_znx.rs  vec_znx_arithmetic.rs  vec_znx_big.rs  vec_znx_big_arithmetic.rs  vec_znx_big_ops.rs  vec_znx_dft.rs  vec_znx_dft_ops.rs  vec_znx_ops.rs  vector_matrix_product.rs  vmp.rs  znx_base.rs
base2k/src/ffi/: cnv.rs  (+9 more)
core/: Cargo.toml
core/benches/: external_product_glwe_fft64.rs  keyswitch_glwe_fft64.rs
core/src/: automorphism.rs  dist.rs  elem.rs  encryption.rs  external_product.rs  fourier_glwe.rs  gglwe.rs  gglwe_ciphertext.rs  ggsw.rs  ggsw_ciphertext.rs  glwe.rs  glwe_ciphertext.rs  glwe_ciphertext_fourier.rs  glwe_keys.rs  glwe_ops.rs  glwe_packing.rs  glwe_plaintext.rs  glwe_trace.rs  grlwe.rs  keys.rs  keyswitch.rs  keyswitch_key.rs  lib.rs  lwe.rs  noise.rs  rgsw.rs  rlwe.rs  scratch.rs  tensor_key.rs  trace.rs  trait_families.rs  utils.rs  vec_glwe_product.rs
math/: Cargo.toml
math/benches/: ntt.rs  operations.rs  ring_rns.rs  sampling.rs
math/examples/: main.rs
math/src/: automorphism.rs  dft.rs  lib.rs  modulus.rs  num_bigint.rs  poly.rs  ring.rs  scalar.rs
math/tests/: automorphism.rs  rescaling_rns.rs  ring_switch.rs
poulpy/: Cargo.toml  README.md
poulpy-backend/: Cargo.toml  README.md  build.rs
poulpy-backend/benches/: fft.rs  vec_znx.rs  vmp.rs
poulpy-backend/builds/: cpu_spqlios.rs
poulpy-backend/examples/: rlwe_encrypt.rs
poulpy-backend/src/: lib.rs
poulpy-bench/: Cargo.toml  README.md
poulpy-bench/benches/: automorphism.rs  bdd_arithmetic.rs  bdd_prepare.rs  blind_rotate.rs  circuit_bootstrapping.rs  ckks_composite.rs  ckks_leveled.rs  ckks_mul_table.rs  ckks_operations.rs  convolution.rs  decryption.rs  encryption.rs  external_product.rs  fft.rs  glwe_tensor.rs  keyswitch.rs  ntt.rs  ntt120_avx_vs_avx512.rs  operations.rs  standard.rs  svp.rs  vec_znx.rs  vec_znx_big.rs  vec_znx_dft.rs  vmp.rs
poulpy-bench/examples/: custom_params.json  run_custom_params.sh
poulpy-bench/src/: lib.rs  params.rs
poulpy-ckks/: Cargo.toml  README.md
poulpy-ckks/benches/: ckks_arithmetic.rs
poulpy-ckks/examples/: poly2.rs
poulpy-ckks/src/: error.rs  lib.rs
poulpy-core/: Cargo.toml  README.md
poulpy-core/benches/: external_product_glwe_fft64.rs  keyswitch_glwe.rs  keyswitch_glwe_fft64.rs
poulpy-core/examples/: encryption.rs
poulpy-core/src/: dist.rs  glwe_packer.rs  glwe_packing.rs  glwe_trace.rs  lib.rs  scratch.rs  utils.rs  vec_znx_host_ops.rs
poulpy-cpu-avx/: Cargo.toml  README.md
poulpy-cpu-avx/benches/: convolution.rs  fft.rs  ntt.rs  vec_znx.rs  vmp.rs
poulpy-cpu-avx/examples/: rlwe_encrypt.rs  rlwe_encrypt_avx.rs
poulpy-cpu-avx/src/: convolution.rs  core_impl.rs  hal_impl.rs  lib.rs  module.rs  scratch.rs  svp.rs  tests.rs  vec_znx.rs  vec_znx_big.rs  vec_znx_dft.rs  vmp.rs
poulpy-cpu-avx512/: Cargo.toml  README.md
poulpy-cpu-avx512/examples/: rlwe_encrypt_avx512.rs
poulpy-cpu-avx512/src/: hal_impl.rs  lib.rs  vec_znx_big_avx512.rs
poulpy-cpu-ifma/: Cargo.toml  README.md
poulpy-cpu-ifma/examples/: rlwe_encrypt_ifma.rs
poulpy-cpu-ifma/src/: hal_impl.rs  lib.rs
poulpy-cpu-ref/: Cargo.toml  README.md
poulpy-cpu-ref/benches/: convolution.rs  fft.rs  ntt.rs  vec_znx.rs  vmp.rs
poulpy-cpu-ref/examples/: core_encryption.rs
poulpy-cpu-ref/src/: convolution.rs  core_impl.rs  hal_impl.rs  lib.rs  module.rs  reim.rs  scratch.rs  svp.rs  tests.rs  vec_znx.rs  vec_znx_big.rs  vec_znx_dft.rs  vmp.rs  znx.rs
poulpy-gpu-cuda/: Cargo.toml  README.md  build.rs
poulpy-gpu-cuda/cuda/: ntt120_big.cu  ntt120_cnv.cu  ntt120_crt.cu  ntt120_internal.cuh  ntt120_ntt.cu  ntt120_shift.cu  ntt120_vec_znx.cu
poulpy-gpu-cuda/doc/: ntt120-gpu-design.md  ntt120-implementation-plan.md
poulpy-gpu-cuda/src/: hal_impl.rs  lib.rs  tests.rs
poulpy-hal/: Cargo.toml  README.md
poulpy-hal/docs/: backend_safety_contract.md
poulpy-hal/src/: lib.rs  source.rs
poulpy-schemes/: Cargo.toml  README.md
poulpy-schemes/benches/: bdd_arithmetic.rs  bdd_prepare.rs  blind_rotate.rs  circuit_bootstrapping.rs  fhe_uint_prepare.rs
poulpy-schemes/examples/: bdd_arithmetic.rs  circuit_bootstrapping.rs  max_array.rs
poulpy-schemes/src/: lib.rs
poulpy/examples/: circuit_bootstrapping.rs
poulpy/src/: lib.rs
rns/: Cargo.toml
rns/benches/: ntt.rs  operations.rs  ring_rns.rs  sampling.rs
rns/examples/: main.rs
rns/src/: dft.rs  modulus.rs  poly.rs  scalar.rs
rns/tests/: automorphism.rs  digit_decomposition.rs  rescaling_rns.rs  ring_switch.rs
(+2019 files in other folders)
