[workspace]
members = ["poulpy-hal", "poulpy-core", "poulpy-cpu-avx", "poulpy-schemes", "poulpy-cpu-ref"]
resolver = "3"

[workspace.dependencies]
poulpy-hal = "0.4.1"
poulpy-core = "0.4.1"
poulpy-cpu-avx = "0.1.1"
poulpy-cpu-ref = "0.1.1"
poulpy-schemes = "0.4.1"
rug = "1.28.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
rand_distr = "0.5.1"
itertools = "0.14.0"
criterion = "0.7.0"
byteorder = "1.5.0"
zstd = "0.13.3"
once_cell = "1.21.3"
bytemuck = "1.24.0"
paste = "1.0.15"