[workspace]
members = ["poulpy-hal", "poulpy-core", "poulpy-cpu-avx", "poulpy-schemes", "poulpy-cpu-ref"]
resolver = "3"

[workspace.dependencies]
poulpy-hal = {path = "poulpy-hal"}
poulpy-core = {path = "poulpy-core"}
poulpy-cpu-avx = {path = "poulpy-cpu-avx"}
poulpy-cpu-ref = {path = "poulpy-cpu-ref"}
poulpy-schemes = {path = "poulpy-schemes"}
rug = "1.28.1"
rand = "0.10.0"
rand_chacha = "0.10.0"
rand_core = "0.10.0"
rand_distr = "0.6.0"
itertools = "0.14.0"
criterion = "0.8.2"
byteorder = "1.5.0"
zstd = "0.13.3"
once_cell = "1.21.3"
bytemuck = "1.25.0"
paste = "1.0.15"