[package]
name = "backend"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rug = {workspace = true}
criterion = {workspace = true}
itertools = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
rand_core = {workspace = true}
sampling = { path = "../sampling" }
utils = { path = "../utils" }
paste = "1.0.15"
byteorder = {workspace = true}

[build-dependencies]
cmake = "0.1.54"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]