[package]
name = "base2k"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = {workspace = true}
itertools = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
rand_core = {workspace = true}
sampling = { path = "../sampling" }
utils = { path = "../utils" }

[[bench]]
name = "fft"
harness = false