[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
rug = {workspace = true}
criterion = {workspace = true}
backend = {path="../backend"}
sampling = {path="../sampling"}
rand_distr = {workspace = true}
itertools = {workspace = true}

[[bench]]
name = "external_product_glwe_fft64"
harness = false

[[bench]]
name = "keyswitch_glwe_fft64"
harness = false