[package]
name = "poulpy-backend"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A crate implementing bivariate polynomial arithmetic"
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[dependencies]
rug = {workspace = true}
criterion = {workspace = true}
itertools = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
rand_core = {workspace = true}
byteorder = {workspace = true}
rand_chacha = "0.9.0"

[build-dependencies]
cmake = "0.1.54"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]