[package]
name = "poulpy-bench"
version = "0.4.4"
edition = "2024"
license = "Apache-2.0"
description = "Consolidated benchmark suite for poulpy"
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
publish = false

[features]
enable-avx = ["dep:poulpy-cpu-avx", "poulpy-cpu-avx/enable-avx", "poulpy-core/enable-avx", "poulpy-schemes/enable-avx"]

[dependencies]
criterion = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
poulpy-schemes = {workspace = true}
poulpy-cpu-ref = {workspace = true}
poulpy-cpu-avx = {workspace = true, optional = true}

[[bench]]
name = "vec_znx"
harness = false

[[bench]]
name = "vec_znx_big"
harness = false

[[bench]]
name = "vec_znx_dft"
harness = false

[[bench]]
name = "svp"
harness = false

[[bench]]
name = "vmp"
harness = false

[[bench]]
name = "convolution"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "decryption"
harness = false

[[bench]]
name = "external_product"
harness = false

[[bench]]
name = "automorphism"
harness = false

[[bench]]
name = "keyswitch"
harness = false

[[bench]]
name = "blind_rotate"
harness = false

[[bench]]
name = "circuit_bootstrapping"
harness = false

[[bench]]
name = "bdd_arithmetic"
harness = false

[[bench]]
name = "bdd_prepare"
harness = false
