[package]
name = "poulpy-bench"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "Consolidated benchmark suite for poulpy"
repository = "https://github.com/poulpy-fhe/poulpy"
homepage = "https://github.com/poulpy-fhe/poulpy"
publish = false
readme = "README.md"

[features]
enable-avx = ["dep:poulpy-cpu-avx", "poulpy-cpu-avx/enable-avx", "poulpy-core/enable-avx", "poulpy-ckks/enable-avx", "poulpy-schemes/enable-avx"]
enable-avx512f = ["dep:poulpy-cpu-avx512", "poulpy-cpu-avx512/enable-avx512f", "poulpy-core/enable-avx512f", "poulpy-ckks/enable-avx512f", "poulpy-schemes/enable-avx512f"]
enable-ifma = ["enable-avx512f", "poulpy-cpu-avx512/enable-ifma", "poulpy-core/enable-ifma", "poulpy-ckks/enable-ifma", "poulpy-schemes/enable-ifma"]
# enable-gpu = ["dep:poulpy-gpu", "poulpy-gpu/enable-gpu"]

[dependencies]
criterion = {workspace = true}
rand = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
poulpy-ckks = {workspace = true}
poulpy-schemes = {workspace = true}
poulpy-cpu-ref = {workspace = true}
poulpy-cpu-avx = {workspace = true, optional = true}
poulpy-cpu-avx512 = {workspace = true, optional = true}
# poulpy-gpu = {workspace = true, optional = true}

[[bench]]
name = "vec_znx"
harness = false

[[bench]]
name = "vec_znx_big"
harness = false

[[bench]]
name = "vec_znx_dft"
harness = false

[[bench]]
name = "svp"
harness = false

[[bench]]
name = "vmp"
harness = false

[[bench]]
name = "convolution"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "decryption"
harness = false

[[bench]]
name = "external_product"
harness = false

[[bench]]
name = "glwe_tensor"
harness = false

[[bench]]
name = "ckks_composite"
harness = false

[[bench]]
name = "ckks_add"
harness = false

[[bench]]
name = "ckks_sub"
harness = false

[[bench]]
name = "ckks_unary"
harness = false

[[bench]]
name = "ckks_mul"
harness = false

[[bench]]
name = "ckks_automorphism"
harness = false

[[bench]]
name = "automorphism"
harness = false

[[bench]]
name = "keyswitch"
harness = false

[[bench]]
name = "blind_rotate"
harness = false

[[bench]]
name = "circuit_bootstrapping"
harness = false

[[bench]]
name = "bdd_arithmetic"
harness = false

[[bench]]
name = "bdd_prepare"
harness = false

[[bench]]
name = "standard"
harness = false
