[package]
name = "poulpy-ckks"
version = "0.4.4"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A backend agnostic crate implementing the CKKS FHE scheme"
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[features]
enable-avx = []

[dependencies]
poulpy-cpu-avx = {workspace = true}
poulpy-cpu-ref = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
rand = {workspace = true}
