[package]
name = "poulpy-ckks"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A backend agnostic crate implementing the CKKS FHE scheme"
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[features]
enable-avx = ["dep:poulpy-cpu-avx", "poulpy-core/enable-avx", "poulpy-cpu-avx/enable-avx"]
enable-ifma = ["dep:poulpy-cpu-ifma", "poulpy-core/enable-ifma", "poulpy-cpu-ifma/enable-ifma"]

[dependencies]
poulpy-cpu-avx = {workspace = true, optional = true}
poulpy-cpu-ifma = {workspace = true, optional = true}
poulpy-cpu-ref = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
anyhow = {workspace = true}
bytemuck = {workspace = true}

[dev-dependencies]
f128 = "0.2"
