[package]
name = "poulpy-core"
version = "0.4.4"
edition = "2024"
license = "Apache-2.0"
description = "A backend agnostic crate implementing RLWE-based encryption & arithmetic."
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[features]
enable-avx = ["dep:poulpy-cpu-avx"]
default = ["dep:poulpy-cpu-ref"]

[dependencies]
rug = {workspace = true}
criterion = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-cpu-avx = {workspace = true, optional = true}
poulpy-cpu-ref = {workspace = true, optional = true}
itertools = {workspace = true}
byteorder = {workspace = true}
bytemuck = {workspace = true}
once_cell = {workspace = true}
paste = {workspace = true}
rand = {workspace = true}

[[bench]]
name = "external_product_glwe_fft64"
harness = false

[[bench]]
name = "keyswitch_glwe_fft64"
harness = false