[package]
name = "poulpy-core"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "A backend agnostic crate implementing RLWE-based encryption & arithmetic."
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[features]
default = []
enable-avx = []

[dependencies]
dashu-float = {workspace = true}
criterion = {workspace = true}
poulpy-hal = {workspace = true}
itertools = {workspace = true}
byteorder = {workspace = true}
bytemuck = {workspace = true}
once_cell = {workspace = true}
paste = {workspace = true}
rand = {workspace = true}
anyhow = {workspace = true}
