[package]
name = "poulpy-cpu-avx"
version = "0.3.2"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A crate providing concrete AVX accelerated CPU implementations of poulpy-hal through its open extension points"
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[features]
enable-avx = []

[dependencies]
poulpy-hal = {workspace = true}
poulpy-cpu-ref = {workspace = true}
rug = {workspace = true}
criterion = {workspace = true}
itertools = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
rand_core = {workspace = true}
byteorder = {workspace = true}
once_cell = {workspace = true}
rand_chacha = {workspace = true}
paste = {workspace = true}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[[bench]]
name = "convolution"
harness = false