[package]
name = "poulpy-cpu-ref"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "The providing concrete implementations of poulpy-hal through its open extension points and reference cpu code"
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[dependencies]
poulpy-core = {workspace = true}
poulpy-hal = {workspace = true}
dashu-float = {workspace = true}
criterion = {workspace = true}
bytemuck = {workspace = true}
itertools = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
rand_core = {workspace = true}
byteorder = {workspace = true}
once_cell = {workspace = true}
rand_chacha = {workspace = true}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
