[package]
name = "poulpy-hal"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A crate providing layouts and a trait-based hardware acceleration layer with open extension points, matching the API and types of spqlios-arithmetic."
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[dependencies]
rug = {workspace = true}
criterion = {workspace = true}
itertools = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
rand_core = {workspace = true}
byteorder = {workspace = true}
once_cell = {workspace = true}
rand_chacha = "0.9.0"
bytemuck = "1.23.2"


[build-dependencies]
cmake = "0.1.54"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]