[package]
name = "poulpy-schemes"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A backend agnostic crate implementing binary/gate-level RLWE-based FHE"
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[features]
enable-avx = ["dep:poulpy-cpu-avx", "poulpy-core/enable-avx"]
enable-ifma = ["dep:poulpy-cpu-ifma", "poulpy-core/enable-ifma"]

[dependencies]
criterion = {workspace = true}
poulpy-cpu-avx = {workspace = true, optional = true}
poulpy-cpu-ifma = {workspace = true, optional = true}
poulpy-cpu-ref = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
itertools = {workspace = true}
byteorder = {workspace = true}
rand = {workspace = true}
paste = {workspace = true}
