[package]
name = "poulpy-schemes"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "A backend agnostic crate implementing binary/gate-level RLWE-based FHE"
repository = "https://github.com/poulpy-fhe/poulpy"
homepage = "https://github.com/poulpy-fhe/poulpy"
documentation = "https://docs.rs/poulpy"

[features]
enable-avx = ["dep:poulpy-cpu-avx", "poulpy-cpu-avx/enable-avx", "poulpy-core/enable-avx"]
enable-avx512f = ["dep:poulpy-cpu-avx512", "poulpy-cpu-avx512/enable-avx512f", "poulpy-core/enable-avx512f"]
enable-ifma = ["enable-avx512f", "poulpy-cpu-avx512/enable-ifma", "poulpy-core/enable-ifma"]

[dependencies]
poulpy-cpu-avx = {workspace = true, optional = true}
poulpy-cpu-avx512 = {workspace = true, optional = true}
poulpy-cpu-ref = {workspace = true}
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
itertools = {workspace = true}
byteorder = {workspace = true}
rand = {workspace = true}
paste = {workspace = true}
anyhow = {workspace = true}
