[package]
name = "poulpy"
version = "0.1.0"
edition = "2024"
description = "An efficient & modular FHE library using bivariate polynomial representation"
licence = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/phantomzone-org/poulpy"
homepage = "https://github.com/phantomzone-org/poulpy"
documentation = "https://docs.rs/poulpy"

[dependencies]
backend = {path="../backend"}
core = {path="../core"}
schemes = {path="../schemes"}
sampling = {path="../sampling"}