[package]
name = "rns"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
primality-test = "0.3.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer ="0.1.46"
prime_factorization = "1.0.5"
sprs = "0.11.2"
criterion = {workspace = true}
itertools = {workspace = true}
rand_distr = {workspace = true}
sampling = { path = "../sampling" }
utils = { path = "../utils" }

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "ring_rns"
harness = false

[[bench]]
name = "sampling"
harness = false